src/tests/zustand-pick-from/syntax-errors/direct-pick-from-access2.js
const name = useGlobalStore.pickFrom("order")?.user.name;
